--- a/SourceStack/Pages/Article/Single.cshtml
+++ b/SourceStack/Pages/Article/Single.cshtml
@@ -20,10 +20,10 @@
 <br />
 <div>
     <span class="font-weight-bold"><i class="fa fa-tags"></i>关键字：</span>
-    @for (int i = 0; i < @Model.Article.keywords.Count; i++)
+    @*@for (int i = 0; i < @Model.Article.keywords.Count; i++)
     {
         <span class="badge badge-pill badge-secondary">@Model.Article.keywords[i].Name</span>
-    }
+    }*@
 
 </div>
 <div style="text-align:right">
