--- a/YQBangMVC/Views/Register/Index.cshtml
+++ b/YQBangMVC/Views/Register/Index.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "注册";
 }
 
-
+@Html.Partial("_User")
 @using (Html.BeginForm())
 {
     <section style="padding:10px;border:2px dashed #f1f1f1;background-color:lightyellow;border-radius: 5px;margin-bottom:20px;">
@@ -17,14 +17,14 @@
         </div>
         <div class="form-group">
             <label for="exampleInputEmail1">邀请码：（* 必填） </label>
-            @Html.TextBoxFor(m => m.InviterNumber, new { ype = "text", @class = "form-control" })
+            @Html.TextBoxFor(m => m.InviterNumber, new { type = "text", @class = "form-control" })
             @Html.ValidationMessageFor(m => m.InviterNumber)
         </div>
 
         <div class="form-group">
             <label for="exampleInputEmail1">用户名：（* 必填） </label>
           
-            @Html.TextBoxFor(m => m.Name, new { type = "text", @class = "form-control" })
+            @Html.TextBoxFor(m => m.Name, new { type = "text", @class = "form-control" ,zl_name=string.Empty})
             @Html.ValidationMessageFor(m => m.Name)
         </div>
         <div class="form-group">
@@ -33,7 +33,7 @@
             @Html.ValidationMessageFor(m => m.Password)
         </div>
         <div class="form-group">
-            <label for="exampleInputEmail1">验证密码：（* 必填） </label>
+            <label for="exampleInputEmail1">确认密码：（* 必填） </label>
             @Html.TextBoxFor(m=>m.ComfirmPassword, new { type = "password", @class = "form-control" })
             @Html.ValidationMessageFor(m=>m.ComfirmPassword)
         </div>
