--- a/YQBangMVC/Views/Article/New.cshtml
+++ b/YQBangMVC/Views/Article/New.cshtml
@@ -37,6 +37,7 @@
     <div class="form-group">
         <label>标题：（* 必填）</label>
         @Html.TextBoxFor(m => m.Title, new { placeholder = "来一个醒目的标题吧", @class = "form-control" })
+        @Html.ValidationMessageFor(m=>m.Title)
     </div>
     <div class="form-group">
         <label>内容：（* 必填）</label>
@@ -48,6 +49,7 @@
             style = "background-color:lightyellow",
             @class = "form-control"
            })
+        @Html.ValidationMessageFor(m=>m.Body)
     </div>
     <div class="form-group">
         <label>添加到系列：</label>
