--- a/YQBangMVC/Views/Shared/_Layout.cshtml
+++ b/YQBangMVC/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>-源站 </title>
+    <link rel=" shortcut icon " type="image/x-icon" href="~/Images/logo-big.ico" media="screen" />
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
     <link href="~/Content/bootstrap-theme.min.css" rel="stylesheet" />
     <script src="~/Scripts/jquery-3.4.1.min.js"></script>
