--- a/学习/Html/Views/Home/Index.cshtml
+++ b/学习/Html/Views/Home/Index.cshtml
@@ -1,8 +1,11 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+@model Html.Models.IndexModel
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div>
+    <h1>我是Border页面</h1>
+    <h3>@DateTime.Now</h3>
+    <h4>名字：@Model.username</h4>
+
 </div>
